# adeptus

./: .gitignore  Adeptus.pro  CMakeLists.txt  ImageViewWindow.cpp  ImageViewWindow.h  README.md  SqlBugProvider.cpp  SqlBugProvider.h  SqlHelpers.cpp  SqlHelpers.h  aboutwindow.cpp  aboutwindow.h  adeptus.pro  app.rc  app.template.rc  appearance.h  browsercommands.cpp  browsercommands.h  bugeditor.cpp  bugeditor.h  bughistory.cpp  bughistory.h  bugmanager.cpp  bugmanager.h  bugoperations.cpp  bugoperations.h  bugsolver.cpp  bugsolver.h  bugtypes.cpp  bugtypes.h  dicteditor.cpp  filterpanel.cpp  filterpanel.h  guiactions.cpp  guiactions.h  images.qrc  issuetable.cpp  issuetable.h  issuetextedit.cpp  issuetextedit.h  (+18 more)
db/: db.h  historymanager.cpp  historymanager.h  issuemanager.cpp  issuemanager.h  relationmanager.cpp  relationmanager.h  sqlhelpers.cpp  sqlhelpers.h
img/about/: about_sm.psd
release/: README.md  adeptus.desktop  helpers.py  history.json  history.yaml  make_package.py  make_version.py  version.pri  version.rc  version.rc.in  version.rc.template
scripts/: build_release.bat  build_release.sh  make_package_linux.sh  make_package_win.bat
src/: ImageViewWindow.cpp  aboutwindow.cpp  app.qrc  app.rc  appearance.cpp  browsercommands.h  bugeditor.cpp  bughistory.cpp  bughistory.h  bugitemdelegate.cpp  bugitemdelegate.h  bugmanager.cpp  bugmanager.h  bugsolver.cpp  bugtypes.cpp  dicteditor.cpp  dicteditor.h  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  markdowneditor.h  operations.cpp  preferences.cpp  preferences.h  prefseditor.cpp  prefseditor.h
src/db/: db.cpp  historymanager.cpp  historymanager.h  issuemanager.h  relationmanager.h
src/db_old/: bugmanager.cpp
src/dialogs/: aboutwindow.cpp  aboutwindow.h  bugeditor.cpp  bugeditor.h  bugsolver.cpp  bugsolver.h  dicteditor.cpp  dicteditor.h  imageviewwindow.cpp  prefseditor.cpp  prefseditor.h
src/pages/: bughistory.cpp  bughistory.h  issuetable.cpp  issuetable.h  startpage.cpp  startpage.h
src/utils/: appearance.cpp  browsercommands.cpp  browsercommands.h  bugitemdelegate.cpp  bugitemdelegate.h  markdown.cpp  markdown.h
src/widgets/: filterpanel.cpp  filterpanel.h  issuetextview.cpp  issuetextview.h  markdowneditor.cpp  markdowneditor.h
